feat: Implement Azure Functions backend with authentication, flight search, and booking management
- Added centralized configuration for Azure Functions in config.py
- Created function_app.py to handle HTTP requests for authentication, flight search, and bookings
- Developed AmadeusClient for real flight searches and caching with Redis
- Implemented CosmosDBClient for user and booking management
- Introduced RedisClient for high-performance caching
- Added deploy.sh script for complete Azure deployment
- Created package-lock.json for backend and frontend dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,21 @@ cypress/screenshots/
 *.tgz
 *.zip
 *.tar.gz
+
+# ========================================
+# AZURE & SECRETS - NEVER COMMIT!
+# ========================================
+.env
+.env.*
+!.env.example
+*.secrets
+secrets.json
+outputs.json
+tfplan
+
+# Azure credentials
+azure-credentials.json
+service-principal.json
+
+# Amadeus API keys
+amadeus-credentials.json
