feat: Add scripts for test data insertion and Cosmos DB visualization
- Created `insert_test_data.py` to insert test users, flights, and bookings into Cosmos DB.
- Developed `view_cosmos_db.py` to visualize the contents of the Cosmos DB, including document counts and sample documents.
- Added `startup.sh` for initializing the Flask application with Gunicorn in Azure App Service.
- Updated `README_TFM.md` with economic configuration details for Azure services, focusing on minimizing costs for academic projects.
- Introduced `deploy-tfm.sh` for ultra-economic deployment of the FlysSeats application, including checks for prerequisites and Azure login.
- Enhanced Terraform scripts with outputs for resources and configurations tailored for TFM projects.
- Configured Terraform resources for Azure Functions, Cosmos DB, and App Service with cost-effective settings.
- Created `tfm.tfvars` for ultra-economic configuration, disabling unnecessary services like Redis Cache.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,6 +17,8 @@ amadeus>=8.0.0
 
 # Web framework y utilidades
 flask>=3.0.0
+flask-cors>=4.0.0
+gunicorn>=21.2.0
 requests>=2.31.0
 PyJWT>=2.8.0
 python-dotenv>=1.0.0
